api-gateway/logs/exceptions-2025-07-17.log
{
  error: C:\Users\MSI GF\OneDrive\Desktop\Digital Shop 1.0\Digital-Shop\api-gateway\routes\api.js:628
        }
        ^
  
  SyntaxError: Unexpected token '}'
      at wrapSafe (node:internal/modules/cjs/loader:1512:18)
      at Module._compile (node:internal/modules/cjs/loader:1534:20)
      at Object..js (node:internal/modules/cjs/loader:1699:10)
      at Module.load (node:internal/modules/cjs/loader:1313:32)
      at Function._load (node:internal/modules/cjs/loader:1123:12)
      at TracingChannel.traceSync (node:diagnostics_channel:322:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)
      at Module.require (node:internal/modules/cjs/loader:1335:12)
      at require (node:internal/modules/helpers:136:16)
      at Object.<anonymous> (C:\Users\MSI GF\OneDrive\Desktop\Digital Shop 1.0\Digital-Shop\api-gateway\index.js:34:19),
  level: 'error',
  message: "uncaughtException: Unexpected token '}'\n" +
    'C:\\Users\\MSI GF\\OneDrive\\Desktop\\Digital Shop 1.0\\Digital-Shop\\api-gateway\\routes\\api.js:628\n' +
    '      }\n' +
    '      ^\n' +
    '\n' +
    "SyntaxError: Unexpected token '}'\n" +
    '    at wrapSafe (node:internal/modules/cjs/loader:1512:18)\n' +
    '    at Module._compile (node:internal/modules/cjs/loader:1534:20)\n' +
    '    at Object..js (node:internal/modules/cjs/loader:1699:10)\n' +
    '    at Module.load (node:internal/modules/cjs/loader:1313:32)\n' +
    '    at Function._load (node:internal/modules/cjs/loader:1123:12)\n' +
    '    at TracingChannel.traceSync (node:diagnostics_channel:322:14)\n' +
    '    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)\n' +
    '    at Module.require (node:internal/modules/cjs/loader:1335:12)\n' +
    '    at require (node:internal/modules/helpers:136:16)\n' +
    '    at Object.<anonymous> (C:\\Users\\MSI GF\\OneDrive\\Desktop\\Digital Shop 1.0\\Digital-Shop\\api-gateway\\index.js:34:19)',
  stack: 'C:\\Users\\MSI GF\\OneDrive\\Desktop\\Digital Shop 1.0\\Digital-Shop\\api-gateway\\routes\\api.js:628\n' +
    '      }\n' +
    '      ^\n' +
    '\n' +
    "SyntaxError: Unexpected token '}'\n" +
    '    at wrapSafe (node:internal/modules/cjs/loader:1512:18)\n' +
    '    at Module._compile (node:internal/modules/cjs/loader:1534:20)\n' +
    '    at Object..js (node:internal/modules/cjs/loader:1699:10)\n' +
    '    at Module.load (node:internal/modules/cjs/loader:1313:32)\n' +
    '    at Function._load (node:internal/modules/cjs/loader:1123:12)\n' +
    '    at TracingChannel.traceSync (node:diagnostics_channel:322:14)\n' +
    '    at wrapModuleLoad (node:internal/modules/cjs/loader:217:24)\n' +
    '    at Module.require (node:internal/modules/cjs/loader:1335:12)\n' +
    '    at require (node:internal/modules/helpers:136:16)\n' +
    '    at Object.<anonymous> (C:\\Users\\MSI GF\\OneDrive\\Desktop\\Digital Shop 1.0\\Digital-Shop\\api-gateway\\index.js:34:19)',
  exception: true,
  date: 'Thu Jul 17 2025 08:36:04 GMT+0700 (Indochina Time)',
  process: {
    pid: 15236,
    uid: null,
    gid: null,
    cwd: 'C:\\Users\\MSI GF\\OneDrive\\Desktop\\Digital Shop 1.0\\Digital-Shop\\api-gateway',
    execPath: 'E:\\Coding Resource\\Node.js\\node.exe',
    version: 'v22.13.0',
    argv: [
      'E:\\Coding Resource\\Node.js\\node.exe',
      'C:\\Users\\MSI GF\\OneDrive\\Desktop\\Digital Shop 1.0\\Digital-Shop\\api-gateway\\index.js'
    ],
    memoryUsage: {
      rss: 122187776,
      heapTotal: 82341888,
      heapUsed: 52543960,
      external: 21650948,
      arrayBuffers: 18311600
    }
  },
  os: { loadavg: [ 0, 0, 0 ], uptime: 138023.203 },
  trace: [
    {
      column: 18,
      file: 'node:internal/modules/cjs/loader',
      function: 'wrapSafe',
      line: 1512,
      method: null,
      native: false
    },
    {
      column: 20,
      file: 'node:internal/modules/cjs/loader',
      function: 'Module._compile',
      line: 1534,
      method: '_compile',
      native: false
    },
    {
      column: 10,
      file: 'node:internal/modules/cjs/loader',
      function: 'Object..js',
      line: 1699,
      method: '.js',
      native: false
    },
    {
      column: 32,
      file: 'node:internal/modules/cjs/loader',
      function: 'Module.load',
      line: 1313,
      method: 'load',
      native: false
    },
    {
      column: 12,
      file: 'node:internal/modules/cjs/loader',
      function: 'Function._load',
      line: 1123,
      method: '_load',
      native: false
    },
    {
      column: 14,
      file: 'node:diagnostics_channel',
      function: 'TracingChannel.traceSync',
      line: 322,
      method: 'traceSync',
      native: false
    },
    {
      column: 24,
      file: 'node:internal/modules/cjs/loader',
      function: 'wrapModuleLoad',
      line: 217,
      method: null,
      native: false
    },
    {
      column: 12,
      file: 'node:internal/modules/cjs/loader',
      function: 'Module.require',
      line: 1335,
      method: 'require',
      native: false
    },
    {
      column: 16,
      file: 'node:internal/modules/helpers',
      function: 'require',
      line: 136,
      method: null,
      native: false
    },
    {
      column: 19,
      file: 'C:\\Users\\MSI GF\\OneDrive\\Desktop\\Digital Shop 1.0\\Digital-Shop\\api-gateway\\index.js',
      function: null,
      line: 34,
      method: null,
      native: false
    }
  ],
  timestamp: '2025-07-17 08:36:04'
}
